# OpenMV

./: .gitignore  CAMERA_NODE_USER_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION_REORGANIZATION.md  INSTALL.md  IO_CAMERA_UI_ISSUE_DIAGNOSIS.md  LICENSE  NODE_LIBRARY_FIX_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.0.1.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.2.0.md  RELEASE_NOTES_v5.3.0.md  UI_INTEGRATION_REPORT.md  build_cpp.bat  build_cpp.sh  check_tab_mapping.py  detailed_debug.py  diagnose_empty_node_library.py  diagnose_node_library.py  fix_builtin_imports.py  fix_marketplace_imports.py  run_graph.bat  run_graph.sh  run_python.bat  run_python.sh  test_log_modes.py  test_logger.py  test_plugin_step2.py  test_plugin_step2_refactor.py  test_plugin_step4_refactor.py  test_plugin_step5_refactor.py  test_plugin_step6.py  test_plugin_step6_refactor.py  verify_io_camera_simple.py  默认工程.proj
.ai_memories/: USAGE_GUIDE.md
.deepseek/: instructions.md
.lingma/: code-style.md
.trae/: prompt.md
docs/: AI_MODULE_RESOURCE_ISOLATION.md  BATCH_PROCESSING_QUICK_TEST.md  CAMERA_NODE_IMPLEMENTATION_SUMMARY.md  CROSS_ENVIRONMENT_MIGRATION.md  Debug_command.md  END_TO_END_WORKFLOW_GUIDE.md  IMAGE_ANNOTATION_PHASE1_REPORT.md  LOGGER_USAGE.md  LOG_SYSTEM_ITERATION_SUMMARY.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_EXTENSION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PLUGIN_MIGRATION_TUTORIAL.md  PROJECT_FILE_DEBUG_GUIDE.md  RELEASE_NOTES_v5.0.md  (+11 more)
src/CPP/: CMakeLists.txt  README.md  main.cpp  vision_system.cpp  vision_system.h
(+364 files in other folders)
